--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 2rem;
+    height: 100vh;
   }
   &-right{
     padding: 3rem;
@@ -27,19 +28,25 @@
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  overflow-y: auto;
+  padding-bottom: 9px;
   &__item {
     padding: 1rem;
     display: flex;
     justify-content: space-between;
-    border-radius: 5px;
+    border: 2px solid black;
+    
     &--pending {
-      background-color: #dbdbdb;
+      background-color: rgba(0, 0, 0, .2);
+      box-shadow: 9px 9px 2px 1px rgba(0, 0, 0, .1);
     }
     &--progress {
-      background-color: rgb(111, 111, 204);
+      background-color: rgba(0, 0, 255, .2);
+      box-shadow: 9px 9px 2px 1px rgba(0, 0, 255, .1);
     }
     &--done {
-      background-color: rgb(52, 170, 52);
+      background-color: rgba(37, 185, 37, .6);
+      box-shadow: 9px 9px 2px 1px rgba(37, 185, 37, .3);
     }
     &-name {
       flex-grow: 1;
@@ -51,12 +58,27 @@
     &-btns{
       flex-shrink: 0;
     }
+    &-delete {
+      background-color: #f4511e;
+      color: white;
+      &:hover {
+        background-color: #e64a19;
+      }
+    }
   }
 }
 
-.detail {
+.details {
   display: grid;
   row-gap: 24px;
+
+  button {
+    height: 40px;
+    background-color: rgba(37, 185, 37, 0.6);
+    &:hover {
+      background-color: rgba(37, 185, 37, 0.8);
+    }
+  }
 }
 
 .add-todo {
@@ -71,10 +93,35 @@
 }
 
 .search {
-  margin-bottom: 2rem;
-  padding-bottom: 2rem;
-  border-bottom: 1px solid;
+  margin-bottom: 4rem;
   input {
     width: 100%;
+  }
+}
+
+input, select {
+  height: 40px;
+  padding: 0 8px;
+}
+input {
+  border: none;
+  border-bottom: 2px solid gray;
+  background-color: #f1f1f1;
+  &:focus {
+    outline: none;
+    border-color: black;
+  }
+}
+
+button {
+  background-color: #ffffff;
+  border: 2px solid black;
+  cursor: pointer;
+  margin: 0 4px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  
+  &:hover {
+    background-color: #f1f1f1;
   }
 }
